build: add esp32 and rock-chips build script

--- a/configure.ac
+++ b/configure.ac
@@ -57,14 +57,20 @@ AC_FUNC_MALLOC
 AC_CONFIG_FILES([Makefile
                  $project_name.pc
                  build-script/Makefile
+                 build-script/esp32/Makefile
+                 build-script/esp32/esp32/Makefile
                  build-script/pc/Makefile
                  build-script/pc/ubuntu/Makefile
                  build-script/pc/windows/Makefile
+                 build-script/rock-chips/Makefile
+                 build-script/rock-chips/rk3568/Makefile
                  doc/Makefile
                  example/Makefile
+                 example/freertos/Makefile
                  example/linux/Makefile
                  example/windows/Makefile
                  include/Makefile
+                 include/freertos/Makefile
                  include/linux/Makefile
                  include/windows/Makefile
                  res/Makefile
@@ -72,9 +78,11 @@ AC_CONFIG_FILES([Makefile
                  res/voice/cn/Makefile
                  res/voice/en/Makefile
                  src/Makefile
+                 src/freertos/Makefile
                  src/linux/Makefile
                  src/windows/Makefile
                  test/Makefile
+                 test/freertos/Makefile
                  test/linux/Makefile
                  test/windows/Makefile])
 AC_OUTPUT
