--- a/src/freertos/Makefile.am
+++ b/src/freertos/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:35
+# @date    01/02 2024 10:26
 # @version v0.0.1
 # 
 # @since    note
@@ -13,14 +13,12 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        05/03 2021      create the file
+#     00      zhenquan.qiu        01/02 2024      create the file
 # 
-#     last modified: 05/03 2021 10:35
+#     last modified: 01/02 2024 10:26
 # ===============================================================
 
-SUBDIRS = $(run_os)
-
-lib_LTLIBRARIES = lib@project_name@.la
+noinst_LTLIBRARIES = lib@project_name@_@run_os@.la
 
 # ------------------
 # defining variables
@@ -42,9 +40,13 @@ _no_error_com   +=
 
 _define_com     +=
 
-_include_com    += -I$(top_srcdir)/include
+_include_com    += \
+                   -I$(top_srcdir)/include/$(run_os) \
+                   -I$(top_srcdir)/include
 
-_sources_com    +=
+_sources_com    += \
+                   hy_calc.c \
+                   hy_module.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -55,19 +57,11 @@ _cflags_com     +=
 
 _cxxflags_com   +=
 
-_ldflags_com    += -version-info @current@:@revision@:@age@
-
-if !COMPILE_DEBUG_INFO
-_ldflags_com    += -export-symbols-regex 'Hy*'
-endif
-
-_ldadd_com      += $(top_builddir)/src/$(run_os)/lib@project_name@_@run_os@.la
-
 _ldadd_com      += $(ldadd_com)
 
-lib@project_name@_la_SOURCES    = $(_sources_com)
-lib@project_name@_la_CPPFLAGS   = $(_cppflags_com)
-lib@project_name@_la_CFLAGS     = $(_cflags_com)
-lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
-lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
-lib@project_name@_la_LIBADD     = $(_ldadd_com)
+lib@project_name@_@run_os@_la_SOURCES    = $(_sources_com)
+lib@project_name@_@run_os@_la_CPPFLAGS   = $(_cppflags_com)
+lib@project_name@_@run_os@_la_CFLAGS     = $(_cflags_com)
+lib@project_name@_@run_os@_la_CXXFLAGS   = $(_cxxflags_com)
+lib@project_name@_@run_os@_la_LDFLAGS    = $(_ldflags_com)
+lib@project_name@_@run_os@_la_LIBADD     = $(_ldadd_com)
