--- a/test/freertos/Makefile.am
+++ b/test/freertos/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:35
+# @date    14/12 2023 16:52
 # @version v0.0.1
 # 
 # @since    note
@@ -13,14 +13,10 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        05/03 2021      create the file
+#     00      zhenquan.qiu        14/12 2023      create the file
 # 
-#     last modified: 05/03 2021 10:35
+#     last modified: 14/12 2023 16:52
 # ===============================================================
-
-SUBDIRS = $(run_os)
-
-lib_LTLIBRARIES = lib@project_name@.la
 
 # ------------------
 # defining variables
@@ -34,6 +30,7 @@ _cflags_com     =
 _cxxflags_com   =
 _ldflags_com    =
 _ldadd_com      =
+bin_PROGRAMS    =
 
 # ---------------------
 # add necessary content
@@ -42,9 +39,13 @@ _no_error_com   +=
 
 _define_com     +=
 
-_include_com    += -I$(top_srcdir)/include
+_include_com    += \
+                   -I$(top_srcdir)/include/$(run_os) \
+                   -I$(top_srcdir)/include
 
-_sources_com    +=
+_sources_com    += \
+                   hy_calc_test.c \
+                   hy_module_test.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -55,19 +56,16 @@ _cflags_com     +=
 
 _cxxflags_com   +=
 
-_ldflags_com    += -version-info @current@:@revision@:@age@
+_ldflags_com    +=
 
-if !COMPILE_DEBUG_INFO
-_ldflags_com    += -export-symbols-regex 'Hy*'
-endif
+_ldadd_com      += \
+                   $(top_builddir)/src/$(run_os)/lib@project_name@.la \
+                   $(ldadd_com)
 
-_ldadd_com      += $(top_builddir)/src/$(run_os)/lib@project_name@_@run_os@.la
-
-_ldadd_com      += $(ldadd_com)
-
-lib@project_name@_la_SOURCES    = $(_sources_com)
-lib@project_name@_la_CPPFLAGS   = $(_cppflags_com)
-lib@project_name@_la_CFLAGS     = $(_cflags_com)
-lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
-lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
-lib@project_name@_la_LIBADD     = $(_ldadd_com)
+bin_PROGRAMS                        += hy_autotools_demo_lib_test
+hy_autotools_demo_lib_test_SOURCES  = $(_sources_com) main.c
+hy_autotools_demo_lib_test_CPPFLAGS = $(_cppflags_com)
+hy_autotools_demo_lib_test_CFLAGS   = $(_cflags_com)
+hy_autotools_demo_lib_test_CXXFLAGS = $(_cxxflags_com)
+hy_autotools_demo_lib_test_LDFLAGS  = $(_ldflags_com)
+hy_autotools_demo_lib_test_LDADD    = $(_ldadd_com)
