--- a/test/freertos/Makefile.am
+++ b/test/freertos/Makefile.am
@@ -59,7 +59,7 @@ _cxxflags_com   +=
 _ldflags_com    +=
 
 _ldadd_com      += \
-                   $(top_builddir)/src/$(run_os)/lib@project_name@.la \
+                   $(top_builddir)/src/$(run_os)/lib$(project_name).la \
                    $(ldadd_com)
 
 bin_PROGRAMS                        += hy_autotools_demo_lib_test
