--- a/example/linux/Makefile.am
+++ b/example/linux/Makefile.am
@@ -57,7 +57,7 @@ _cxxflags_com   +=
 _ldflags_com    +=
 
 _ldadd_com      += \
-                   $(top_builddir)/src/lib@project_name@.la \
+                   $(top_builddir)/src/lib$(project_name).la \
                    $(ldadd_com)
 
 bin_PROGRAMS            += hy_calc_demo
